--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,154 @@
-﻿- raw: 所以其实还是很疼你的嘛。
+﻿- raw: 或跃于渊诀
+  result: Leaping into the Abyss Secret
+  badtrans: true
+  direct: Huo Yue Yu Yuan Jue
+  literal: Huo Yue Yu Yuan Jue
+- raw: 墨羽非攻
+  result: Black Feather Does Not Attack
+  badtrans: true
+  direct: Mo Yu Fei Gong
+  literal: Mo Yu Fei Gong
+- raw: 柳絮之墓  
+  result: Tomb of Liu Xu  
+  badtrans: true  
+  direct: Liu Xu's Tomb  
+  literal: Liu Xu zhi mu  
+- raw: 一股山雨欲来的压抑感让人窒息，只见洪素手持长剑，剑尖稳稳地指向了芦苇居士的颈部。  
+  result: A suffocating sense of impending storm filled the air as Hong Su held a long sword, its tip steadily aimed at Hermit Lu Wei's neck.  
+  badtrans: true  
+  direct: A feeling of mountain rain about to come suppressed made one suffocate, only saw Hong Su holding long sword, sword tip steadily pointing at Lu Wei Hermit's neck.  
+  literal: Yi gu shan yu yu lai de yayi gan rang ren zhixi, zhi jian Hong Su shou chi chang jian, jian jian wen wen de zhixiang le Lu Wei Jushi de jingbu.  
+- raw: ……呵，是你师父，芦苇居士故意让他听到的。  
+  result: ...Heh, it was your master, Hermit Lu Wei, who purposely let him hear that.  
+  badtrans: true  
+  direct: ...Heh, it is your master, Lu Wei Hermit purposely let him hear.  
+  literal: …He, shi ni shifu, Lu Wei Jushi guyi rang ta tingdao de.  
+- raw: 还没说完，我，同时也是洪素和宋忆的杀父仇人。  
+  result: I haven't finished speaking. I am, at the same time, the murderer of Hong Su and Song Yi's father.  
+  badtrans: true  
+  direct: Not yet finished speaking, I, at the same time, am Hong Su and Song Yi's father killer.  
+  literal: Hai mei shuo wan, wo, tongshi ye shi Hong Su he Song Yi de sha fu chouren.  
+- raw: 哦……你是代帮洪素问的吧。  
+  result: Oh... you're asking on behalf of Hong Su, right?  
+  badtrans: true  
+  direct: Oh... you are on behalf of Hong Su asking, right?  
+  literal: O... ni shi dai bang Hong Su wen de ba.  
+- raw: 芦苇居士  
+  result: Hermit Lu Wei  
+  badtrans: true  
+  direct: Lu Wei Hermit  
+  literal: Lu Wei Jushi  
+- raw: 您可是芦苇居士？  
+  result: Are you the Hermit Lu Wei?  
+  badtrans: true  
+  direct: You are not the Lu Wei Hermit?  
+  literal: Nin kě shì Lu Wei Jushi?  
+- raw: （有些点尚存疑虑，还是找芦苇居士本人问清楚吧）  
+  result: (Some points are still unclear, it's better to ask Hermit Lu Wei himself.)  
+  badtrans: true  
+  direct: (Some points still have doubts, better find Lu Wei Hermit himself to ask clearly.)  
+  literal: (Youxie dian shang cun yilv, haishi zhao Lu Wei Jushi benren wen qingchu ba)  
+- raw: 芦苇居士他不顾众人反对，执意要把独门秘籍传授给吊儿郎当的弟子楚无敌。宋忆眼见势头不对，就去投靠楚无敌了呗。  
+  result: Ignoring everyone's objections, Hermit Lu Wei insisted on passing his secret techniques to the carefree Chu Wudi. Seeing the shift in power, Song Yi sided with him.  
+  badtrans: true  
+  direct: Lu Wei Hermit he ignored everyone's opposition, insisted on passing unique manual to careless disciple Chu Wudi. Song Yi seeing momentum was wrong, then went to follow Chu Wudi.  
+  literal: Lu Wei Jushi ta bugu zhongren fandui, zhiyi yao ba dumen miji chuanshou gei diao'erlangdang de dizi Chu Wudi. Song Yi yanjian shitou bu dui, jiu qu toukao Chu Wudi le bei.  
+- raw: 据说他们三个师出同门，是那位芦苇居士的弟子。  
+  result: It's said that the three of them trained under the same master, the Hermit Lu Wei.  
+  badtrans: true  
+  direct: It is said they three came from the same school, are that Lu Wei Hermit's disciples.  
+  literal: Jushuo tamen sange shichu tongmen, shi na wei Lu Wei Jushi de dizi.  
+- raw: 不然你以为芦苇居士，他为何会传授独门武功给原本资质平平的楚无敌，而不是天赋异禀的洪素？  
+  result: Then why do you think Master Lu Wei taught his unique martial arts to the mediocre Chu Wudi instead of the gifted Hong Su?  
+  badtrans: true  
+  direct: Otherwise you think Lu Wei Hermit, he why would teach unique martial arts to originally mediocre Chu Wudi, and not gifted Hong Su?  
+  literal: Bur an ni yiwei Lu Wei Jushi, ta weihe hui chuanshou dumen wugong gei yuanben zizi pingping de Chu Wudi, er bushi tianfu yibing de Hong Su?  
+- raw: 楚无敌昔日那副吊儿郎当游手好闲的样子你还记得吧？  
+  result: Do you still remember how Chu Wudi used to be so lazy and carefree?  
+  badtrans: true  
+  direct: Chu Wudi past that kind of careless idle appearance you still remember right?  
+  literal: Chu Wudi xiri na fu diao'erlangdang youshouhaoxian de yangzi ni hai jide ba?  
+- raw: 啧，就知道你会问，张员外还会亏待了你不成？拿去！  
+  result: Tsk, I knew you'd ask. Would Master Zhang really shortchange you? Take it!  
+  badtrans: true  
+  direct: Tsk, just knew you would ask. Patron Zhang still would mistreat you not? Take it!  
+  literal: Ze, jiu zhidao ni hui wen, Zhang yuanwai hai hui kui dai le ni bu cheng? Na qu!  
+- raw: 在他的撮合下，我和宋忆感情一直很好，并且立下誓言：出师后，就成亲。  
+  result: Thanks to his matchmaking, Song Yi and I have always been close and vowed to marry after completing our training.  
+  badtrans: true  
+  direct: Under his matchmaking, I and Song Yi feelings always very good, and made a vow After finishing apprenticeship, then marry.  
+  literal: Zai ta de cuohe xia, wo he Song Yi ganqing yizhi hen hao, bingqie lixia shiyan chushi hou, jiu chengqin.  
+- raw: 没错没错！就是这般态度，他们也让我别再过问了。  
+  result: Exactly! That's their attitude, and they told me to stay out of it.  
+  badtrans: true  
+  direct: No wrong no wrong! Exactly this kind of attitude, they also let me not ask anymore.  
+  literal: Mei cuo mei cuo! Jiushi zhe ban taidu, tamen ye rang wo bie zai guowen le.  
+- raw: 朋友妻，不可欺。你为何要做这等事？  
+  result: A friend's wife is not to be wronged. Why would you do this?  
+  badtrans: true  
+  direct: Friend's wife, cannot deceive. You why want do this kind of thing?  
+  literal: Pengyou qi, bu ke qi. Ni weihe yao zuo zhe deng shi?  
+- raw: 你是谁？
+  result: Who are you?
+  badtrans: true
+  direct: You are who?
+  literal: Ni shi shui?
+- raw: 残烛手起刀落，杀死了对方。
+  result: Can Zhu, with a swift hand and falling knife, killed the opponent.
+  badtrans: true
+  direct: Cán zhú shǒu qǐ dāo luò, shā sǐ le duìfāng.
+  literal: Cán zhú shǒu qǐ dāo luò, shā sǐ le duìfāng.
+- raw: 杀了他们
+  result: Kill them
+  badtrans: true
+  direct: Kill them.
+  literal: Shā le tāmen
+- raw: 陆锦还没听完，迅速冲了出去。见此，你也跟了出去。
+  result: Lu Jin hadn't finished listening yet, quickly rushing out. Seeing this, you also followed.
+  badtrans: true
+  direct: Lu Jin still hadn't finished hearing, quickly rushed out. Seeing this, you also followed out.
+  literal: Lù Jǐn hái méi tīng wán, xùn sù chōng le chūqù. Jiàn cǐ, nǐ yě gēn le chūqù.
+- raw: 这就吃完了？
+  result: Is it finished already?
+  badtrans: true
+  direct: This already eaten finished?
+  literal: Zhè jiù chī wán le?
+- raw: 如今被发现了恐怕日后事情可不少。
+  result: Now that we have been discovered, things in the future might be quite troublesome.
+  badtrans: true
+  direct: Now discovered fear future things can be many.
+  literal: Rújīn bèi fāxiàn le kǒngpà rìhòu shìqíng kě bù shǎo.
+- raw: 讨厌。
+  result: Annoying
+  badtrans: true
+  direct: Hate.
+  literal: Taoyan.
+- raw: 在外人面前说什么呢，也不害臊。
+  result: What are you saying in front of others? Aren't you embarrassed?
+  badtrans: true
+  direct: In front of outsiders say what, also not ashamed.
+  literal: Zai wairen mianqian shuo shenme ne, ye bu haizao.
+- raw: 哈哈哈！不还是被我追到手了吗！
+  result: Hahaha! Didn't I still manage to win you over?
+  badtrans: true
+  direct: Hahaha! Not still was chased into my hands?
+  literal: Hahaha! Bu haishi bei wo zhui dao shou le ma!
+- raw: 没有，刚才那人从前也是娘子的追求者，自从我们在一起之后便退隐江湖隐居起来了。
+  result: No, that person was once also your suitor. Since we got together, we retreated from the Jianghu and gone into seclusion.
+  badtrans: true
+  direct: No, just now that person before also was lady's suitor, since we together after then retired from Jianghu secluded up.
+  literal: Meiyou, gangcai na ren congqian ye shi niangzi de zhuiqiu zhe, zicong women zai yiqi zhihou bian tuiyin jianghu yinjv qilai le.
+- raw: 飞尘！你没事吧！
+  result: Feichen! Are you okay?
+  badtrans: true
+  direct: Feichen! You no problem?
+  literal: Feichen! Ni mei shi ba!
+- raw: 何苦，勉强不来的。
+  result: Why bother? You can't force it.
+  badtrans: true
+  direct: Why suffer, forcing not come.
+  literal: Heku, mianqiang bu lai de.
+- raw: 所以其实还是很疼你的嘛。
   result: So actually, they still care about you a lot.
   badtrans: true
   direct: So actually still very dote on you ma.
@@ -334,7 +484,7 @@
   literal: <color=#E7BF87>You Long Hua Qiang:</color><color=#DADBD5> Qiehuan dao <color=#FF9971>Qiang</color> taolu hou 5 miao nei tisheng 10% Wai Gong shuxing, huode qixue zuidazhi 5% de hudun.</color>
 
 - raw: <color=#E7BF87>刃下刀心：</color><color=#DADBD5>切换到<color=#FF9971>刀</color>套路后5秒内提升10%内攻属性，获得5%反伤。</color>
-  result: <color=#E7BF87>Blade’s Resolute Heart:</color><color=#DADBD5> After switching to the <color=#FF9971>Blade</color> style, increase Internal Attack attribute by 10% for 5 seconds and gain 5% damage reflection.</color>
+  result: <color=#E7BF87>Blade's Resolute Heart:</color><color=#DADBD5> After switching to the <color=#FF9971>Blade</color> style, increase Internal Attack attribute by 10% for 5 seconds and gain 5% damage reflection.</color>
   badtrans: true
   direct: <color=#E7BF87>Ren Xia Dao Xin:</color><color=#DADBD5> Qiehuan dao <color=#FF9971>Dao</color> taolu hou 5 miao nei tisheng 10% Nei Gong shuxing, huode 5% fanshang.</color>
   literal: <color=#E7BF87>Ren Xia Dao Xin:</color><color=#DADBD5> Qiehuan dao <color=#FF9971>Dao</color> taolu hou 5 miao nei tisheng 10% Nei Gong shuxing, huode 5% fanshang.</color>
@@ -763,11 +913,6 @@
   badtrans: true
   direct: Shang wei
   literal: Shang wei
-- raw: 剑意纵横
-  result: Sword intent sweeping across
-  badtrans: true
-  direct: Jian yi zong heng
-  literal: Jian yi zong heng
 - raw: 迦南地宫化境决
   result: Canaan Underground Palace Transformation Decision
   badtrans: true
@@ -1005,6 +1150,12 @@
   badtrans: true
   direct: Iron Palm King Five
   literal: Tie Zhang Wang Wu
+- raw: 成大婶
+  result: Great Aunt Cheng
+  badtrans: true
+  direct: Cheng Aunt
+  literal: Cheng Da Shen
+
 
 # Character names with non breaking spaces
 - raw: 沈雁弓
@@ -1019,6 +1170,11 @@
   result: "Yang\u00A0Ruoshui"
 
 # Names
+- raw: 布诗
+  result: Bu Shi
+  badtrans: true
+  direct: Cloth Poem
+  literal: Bù Shī
 - raw: 花不迟
   result: Hua Buchi
   badtrans: true
