--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -1958,6 +1958,11 @@
   literal: Lingjun  
 
 # Items and Minerals
+- raw: 碧霄剑
+  result: Jade Sky Sword
+  badtrans: true
+  direct: Bi Xiao Jian
+  literal: Bi Xiao Jian
 - raw: 血菩提
   result: Blood Bodhi
   badtrans: true
@@ -2761,6 +2766,521 @@
   literal: Wang Zhanggui  
 
 # Names
+- raw: 彭康
+  result: Peng Kang
+  badtrans: true
+  direct: Peng Kang
+  literal: Peng Kang
+- raw: 刘山
+  result: Liu Shan
+  badtrans: true
+  direct: Liu Shan
+  literal: Liu Shan
+- raw: 朱其
+  result: Zhu Qi
+  badtrans: true
+  direct: Zhu Qi
+  literal: Zhu Qi
+- raw: 冯复卿
+  result: Feng Fuqing
+  badtrans: true
+  direct: Feng Fu Qing
+  literal: Feng Fu Qing
+- raw: 赵钱
+  result: Zhao Qian
+  badtrans: true
+  direct: Zhao Qian
+  literal: Zhao Qian
+- raw: 楼童
+  result: Lou Tong
+  badtrans: true
+  direct: Lou Tong
+  literal: Lou Tong
+- raw: 周扬
+  result: Zhou Yang
+  badtrans: true
+  direct: Zhou Yang
+  literal: Zhou Yang
+- raw: 李震天
+  result: Li Zhentian
+  badtrans: true
+  direct: Li Zhen Tian
+  literal: Li Zhen Tian
+- raw: 曹公公
+  result: Eunuch Cao
+  badtrans: true
+  direct: Cao Gong Gong
+  literal: Cao Gong Gong
+- raw: 赵烈
+  result: Zhao Lie
+  badtrans: true
+  direct: Zhao Lie
+  literal: Zhao Lie
+- raw: 林峰
+  result: Lin Feng
+  badtrans: true
+  direct: Lin Feng
+  literal: Lin Feng
+- raw: 岳宏
+  result: Yue Hong
+  badtrans: true
+  direct: Yue Hong
+  literal: Yue Hong
+- raw: 谢无极
+  result: Xie Wuji
+  badtrans: true
+  direct: Xie Wu Ji
+  literal: Xie Wu Ji
+- raw: 白斩狂
+  result: Bai Zhankuang
+  badtrans: true
+  direct: Bai Zhan Kuang
+  literal: Bai Zhan Kuang
+- raw: 章武帝
+  result: Emperor Zhangwu
+  badtrans: true
+  direct: Zhang Wu Di
+  literal: Zhang Wu Di
+- raw: 吴叔
+  result: Wu Shu
+  badtrans: true
+  direct: Wu Shu
+  literal: Wu Shu
+- raw: 庞霸天
+  result: Pang Baitian
+  badtrans: true
+  direct: Pang Ba Tian
+  literal: Pang Ba Tian
+- raw: 宗瑞
+  result: Zong Rui
+  badtrans: true
+  direct: Zong Rui
+  literal: Zong Rui
+- raw: 缠鹃
+  result: Chan Juan
+  badtrans: true
+  direct: Chan Juan
+  literal: Chan Juan
+- raw: 张怵
+  result: Zhang Chu
+  badtrans: true
+  direct: Zhang Chu
+  literal: Zhang Chu
+- raw: 李臣
+  result: Li Chen
+  badtrans: true
+  direct: Li Chen
+  literal: Li Chen
+- raw: 刘锋
+  result: Liu Feng
+  badtrans: true
+  direct: Liu Feng
+  literal: Liu Feng
+- raw: 白卢
+  result: Bai Lu
+  badtrans: true
+  direct: Bai Lu
+  literal: Bai Lu
+- raw: 罗啸卿
+  result: Luo Xiaoqing
+  badtrans: true
+  direct: Luo Xiao Qing
+  literal: Luo Xiao Qing
+- raw: 穆炳旭
+  result: Mu Bingxu
+  badtrans: true
+  direct: Mu Bing Xu
+  literal: Mu Bing Xu
+- raw: 程含景
+  result: Cheng Hanjing
+  badtrans: true
+  direct: Cheng Han Jing
+  literal: Cheng Han Jing
+- raw: 钱倩儿
+  result: Qian Qian'er
+  badtrans: true
+  direct: Qian Qian Er
+  literal: Qian Qian Er
+- raw: 谭明
+  result: Tan Ming
+  badtrans: true
+  direct: Tan Ming
+  literal: Tan Ming
+- raw: 柯湘
+  result: Ke Xiang
+  badtrans: true
+  direct: Ke Xiang
+  literal: Ke Xiang
+- raw: 坞丁
+  result: Wu Ding
+  badtrans: false
+  direct: Wu Ding
+  literal: Wu Ding
+- raw: 薛稻
+  result: Xue Dao
+  badtrans: true
+  direct: Xue Dao
+  literal: Xue Dao
+- raw: 上官淑
+  result: Shangguan Shu
+  badtrans: true
+  direct: Shang Guan Shu
+  literal: Shang Guan Shu
+- raw: 凤长天
+  result: Feng Changtian
+  badtrans: true
+  direct: Feng Chang Tian
+  literal: Feng Chang Tian
+- raw: 丸目隼人
+  result: Wanmu Sunren
+  badtrans: true
+  direct: Wan Mu Sun Ren
+  literal: Wan Mu Sun Ren
+- raw: 卫无忌
+  result: Wei Wuji
+  badtrans: true
+  direct: Wei Wu Ji
+  literal: Wei Wu Ji
+- raw: 天残脚
+  result: Tian Canjiao
+  badtrans: true
+  direct: Tian Can Jiao
+  literal: Tian Can Jiao
+- raw: 朱智
+  result: Zhu Zhi
+  badtrans: true
+  direct: Zhu Zhi
+  literal: Zhu Zhi
+- raw: 程达飞
+  result: Cheng Dafei
+  badtrans: true
+  direct: Cheng Da Fei
+  literal: Cheng Da Fei
+- raw: 杨铁心
+  result: Yang Tiexin
+  badtrans: true
+  direct: Yang Tie Xin
+  literal: Yang Tie Xin
+- raw: 乔四
+  result: Qiao Si
+  badtrans: true
+  direct: Qiao Si
+  literal: Qiao Si
+- raw: 司徒鹤
+  result: Situ He
+  badtrans: true
+  direct: Si Tu He
+  literal: Si Tu He
+- raw: 黄岩
+  result: Huang Yan
+  badtrans: true
+  direct: Huang Yan
+  literal: Huang Yan
+- raw: 血玫瑰
+  result: Xue Meigui
+  badtrans: true
+  direct: Xue Mei Gui
+  literal: Xue Mei Gui
+- raw: 曹文焕
+  result: Cao Wenhuan
+  badtrans: true
+  direct: Cao Wen Huan
+  literal: Cao Wen Huan
+- raw: 上官燚
+  result: Shangguan Yi
+  badtrans: true
+  direct: Shang Guan Yi
+  literal: Shang Guan Yi
+- raw: 文定
+  result: Wen Ding
+  badtrans: true
+  direct: Wen Ding
+  literal: Wen Ding
+- raw: 尤哈哈
+  result: You Haha
+  badtrans: true
+  direct: You Ha Ha
+  literal: You Ha Ha
+- raw: 叶霸
+  result: Ye Ba
+  badtrans: true
+  direct: Ye Ba
+  literal: Ye Ba
+- raw: 楚冥阳
+  result: Chu Mingyang
+  badtrans: true
+  direct: Chu Ming Yang
+  literal: Chu Ming Yang
+- raw: 楚云
+  result: Chu Yun
+  badtrans: true
+  direct: Chu Yun
+  literal: Chu Yun
+- raw: 张奇
+  result: Zhang Qi
+  badtrans: true
+  direct: Zhang Qi
+  literal: Zhang Qi
+- raw: 周通
+  result: Zhou Tong
+  badtrans: true
+  direct: Zhou Tong
+  literal: Zhou Tong
+- raw: 张强
+  result: Zhang Qiang
+  badtrans: false
+  direct: Zhang Qiang
+  literal: Zhang Qiang
+- raw: 赵韩枫
+  result: Zhao Hanfeng
+  badtrans: true
+  direct: Zhao Han Feng
+  literal: Zhao Han Feng
+- raw: 祁禅
+  result: Qi Chan
+  badtrans: true
+  direct: Qi Chan
+  literal: Qi Chan
+- raw: 曲芷欢
+  result: Qu Zhihuan
+  badtrans: true
+  direct: Qu Zhi Huan
+  literal: Qu Zhi Huan
+- raw: 阿姝
+  result: A'Shu
+  badtrans: true
+  direct: A Shu
+  literal: A Shu
+- raw: 陆瑜
+  result: Lu Yu
+  badtrans: true
+  direct: Lu Yu
+  literal: Lu Yu
+- raw: 沈诀烽
+  result: Shen Juefeng
+  badtrans: true
+  direct: Shen Jue Feng
+  literal: Shen Jue Feng
+- raw: 赵之杨
+  result: Zhao Zhiyang
+  badtrans: true
+  direct: Zhao Zhi Yang
+  literal: Zhao Zhi Yang
+- raw: 燕北飞
+  result: Yan Beifei
+  badtrans: true
+  direct: Yan Bei Fei
+  literal: Yan Bei Fei
+- raw: 独孤蕴
+  result: Dugu Yun
+  badtrans: true
+  direct: Du Gu Yun
+  literal: Du Gu Yun
+- raw: 段三刀
+  result: Duan Sandao
+  badtrans: true
+  direct: Duan San Dao
+  literal: Duan San Dao
+- raw: 蒋光耀
+  result: Jiang Guangyao
+  badtrans: true
+  direct: Jiang Guang Yao
+  literal: Jiang Guang Yao
+- raw: 孙无策
+  result: Sun Wuce
+  badtrans: true
+  direct: Sun Wu Ce
+  literal: Sun Wu Ce
+- raw: 杨兵
+  result: Yang Bing
+  badtrans: true
+  direct: Yang Bing
+  literal: Yang Bing
+- raw: 姚三娘
+  result: Yao Sanniang
+  badtrans: true
+  direct: Yao San Niang
+  literal: Yao San Niang
+- raw: 杨陆蝉
+  result: Yang Luchan
+  badtrans: true
+  direct: Yang Lu Chan
+  literal: Yang Lu Chan
+- raw: 陈玉娘
+  result: Chen Yuniang
+  badtrans: true
+  direct: Chen Yu Niang
+  literal: Chen Yu Niang
+- raw: 寂真
+  result: Ji Zhen
+  badtrans: true
+  direct: Ji Zhen
+  literal: Ji Zhen
+- raw: 桥山雁
+  result: Qiao Shanyan
+  badtrans: true
+  direct: Qiao Shan Yan
+  literal: Qiao Shan Yan
+- raw: 崔端
+  result: Cui Duan
+  badtrans: true
+  direct: Cui Duan
+  literal: Cui Duan
+- raw: 间真
+  result: Jian Zhen
+  badtrans: false
+  direct: Jian Zhen
+  literal: Jian Zhen
+- raw: 戴子宁
+  result: Dai Zining
+  badtrans: true
+  direct: Dai Zi Ning
+  literal: Dai Zi Ning
+- raw: 陈千柳
+  result: Chen Qianliu
+  badtrans: true
+  direct: Chen Qian Liu
+  literal: Chen Qian Liu
+- raw: 赫连
+  result: He Lian
+  badtrans: true
+  direct: He Lian
+  literal: He Lian
+- raw: 闫巧风
+  result: Yan Qiaofeng
+  badtrans: true
+  direct: Yan Qiao Feng
+  literal: Yan Qiao Feng
+- raw: 位百秋
+  result: Wei Baiqiu
+  badtrans: true
+  direct: Wei Bai Qiu
+  literal: Wei Bai Qiu
+- raw: 卫天籁
+  result: Wei Tianlai
+  badtrans: true
+  direct: Wei Tian Lai
+  literal: Wei Tian Lai
+- raw: 耿才俊
+  result: Geng Caijun
+  badtrans: true
+  direct: Geng Cai Jun
+  literal: Geng Cai Jun
+- raw: 慈恩
+  result: Ci En
+  badtrans: true
+  direct: Ci En
+  literal: Ci En
+- raw: 阎巧
+  result: Yan Qiao
+  badtrans: true
+  direct: Yan Qiao
+  literal: Yan Qiao
+- raw: 王梁
+  result: Wang Liang
+  badtrans: true
+  direct: Wang Liang
+  literal: Wang Liang
+- raw: 阿强
+  result: A'Qiang
+  badtrans: true
+  direct: A Qiang
+  literal: A Qiang
+- raw: 刘华
+  result: Liu Hua
+  badtrans: true
+  direct: Liu Hua
+  literal: Liu Hua
+- raw: 王大壮
+  result: Wang Dazhuang
+  badtrans: true
+  direct: Wang Da Zhuang
+  literal: Wang Da Zhuang
+- raw: 李铭章
+  result: Li Mingzhang
+  badtrans: true
+  direct: Li Ming Zhang
+  literal: Li Ming Zhang
+- raw: 陈威
+  result: Chen Wei
+  badtrans: true
+  direct: Chen Wei
+  literal: Chen Wei
+- raw: 程坤
+  result: Cheng Kun
+  badtrans: true
+  direct: Cheng Kun
+  literal: Cheng Kun
+- raw: 申公纪
+  result: Shen Gongji
+  badtrans: true
+  direct: Shen Gong Ji
+  literal: Shen Gong Ji
+- raw: 陈累
+  result: Chen Lei
+  badtrans: true
+  direct: Chen Lei
+  literal: Chen Lei
+- raw: 空虚子
+  result: Kong Xuzi
+  badtrans: true
+  direct: Kong Xu Zi
+  literal: Kong Xu Zi
+- raw: 任沛
+  result: Ren Pei
+  badtrans: true
+  direct: Ren Pei
+  literal: Ren Pei
+- raw: 司昌盛
+  result: Si Changsheng
+  badtrans: true
+  direct: Si Chang Sheng
+  literal: Si Chang Sheng
+- raw: 六望
+  result: Liu Wang
+  badtrans: true
+  direct: Liu Wang
+  literal: Liu Wang
+- raw: 常毅
+  result: Chang Yi
+  badtrans: true
+  direct: Chang Yi
+  literal: Chang Yi
+- raw: 秦烈
+  result: Qin Lie
+  badtrans: true
+  direct: Qin Lie
+  literal: Qin Lie
+- raw: 穆谨之
+  result: Mu Jinzhi
+  badtrans: true
+  direct: Mu Jin Zhi
+  literal: Mu Jin Zhi
+- raw: 方珏
+  result: Fang Jue
+  badtrans: true
+  direct: Fang Jue
+  literal: Fang Jue
+- raw: 任长昼
+  result: Ren Changzhou
+  badtrans: true
+  direct: Ren Chang Zhou
+  literal: Ren Chang Zhou
+- raw: 刀芙
+  result: Dao Fu
+  badtrans: true
+  direct: Dao Fu
+  literal: Dao Fu
+- raw: 王行山
+  result: Wang Xingshan
+  badtrans: true
+  direct: Wang Xing Shan
+  literal: Wang Xing Shan
+- raw: 周老三
+  result: Zhou Laosan
+  badtrans: true
+  direct: Zhou Lao San
+  literal: Zhou Lao San
 - raw: 薛九剑
   result: Xue Juijian
   badtrans: true
@@ -2969,11 +3489,6 @@
   badtrans: true
   direct: Yu Capital Reason
   literal: Yu Jing You
-- raw: 柯湘
-  result: Ke Xiang
-  badtrans: true
-  direct: Branch Fragrant
-  literal: Ke Xiang
 - raw: 凌岳
   result: Ling Yue
   badtrans: true
