--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -2766,6 +2766,46 @@
   literal: Wang Zhanggui  
 
 # Names
+- raw: 丑丫
+  result: Chou Ya
+  badtrans: true
+  direct: Chou Ya
+  literal: Chou Ya
+- raw: 冬莉
+  result: Dong Li
+  badtrans: true
+  direct: Dong Li
+  literal: Dong Li
+- raw: 秋蓉
+  result: Qiu Rong
+  badtrans: true
+  direct: Qiu Rong
+  literal: Qiu Rong
+- raw: 春香姐
+  result: Sister Chun Xiang
+  badtrans: true
+  direct: Chunxiang Jie
+  literal: Chunxiang Jie
+- raw: 春香
+  result: Chun Xiang
+  badtrans: true
+  direct: Chunxiang Jie
+  literal: Chunxiang Jie
+- raw: 段天瑞
+  result: Duan Tianrui
+  badtrans: true
+  direct: Duan Tian Rui
+  literal: Duan Tian Rui
+- raw: 董涛
+  result: Dong Tao
+  badtrans: true
+  direct: Dong Tao
+  literal: Dong Tao
+- raw: 唐元侁
+  result: Tang Yuanqi
+  badtrans: true
+  direct: Tang Yuan Qi
+  literal: Tang Yuan Qi
 - raw: 彭康
   result: Peng Kang
   badtrans: true
@@ -3024,7 +3064,7 @@
 - raw: 周通
   result: Zhou Tong
   badtrans: true
-  direct: Zhou Tong
+  direct: Zhou Tongxx
   literal: Zhou Tong
 - raw: 张强
   result: Zhang Qiang
@@ -4060,7 +4100,7 @@
   literal: Jiang Yu Shi
 - raw: 宁羽士
   result: Taoist Ning
-  badtrans: true
+  badtrans: false
   direct: Ning Feather Scholar
   literal: Ning Yu Shi
 - raw: 蔺羽士
