--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,9 @@
-﻿- raw: 或跃于渊诀
+﻿- raw: 不管他们
+  result: Do not care about them
+  badtrans: true
+  direct: Bu guan ta men
+  literal: Bu guan ta men
+- raw: 或跃于渊诀
   result: Leaping into the Abyss Secret
   badtrans: true
   direct: Huo Yue Yu Yuan Jue
