--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -2321,3 +2321,71 @@
   result: Xu
 - raw: 亥
   result: Hai
+
+# Realms
+- raw: 略通拳脚
+  result: Basic Martial Skill
+  badtrans: true
+  direct: Slightly Mastered Fist and Feet
+  literal: Lue Tong Quan Jiao
+- raw: 初窥门径
+  result: First Glimpse of the Path
+  badtrans: true
+  direct: First Peep at the Doorway
+  literal: Chu Kui Men Jing
+- raw: 融会贯通
+  result: Integrate Understanding
+  badtrans: true
+  direct: Blend and Connect Completely
+  literal: Rong Hui Guan Tong
+- raw: 登堂入室
+  result: Entering the Hall
+  badtrans: true
+  direct: Ascend to the Hall, Enter the Room
+  literal: Deng Tang Ru Shi
+- raw: 炉火纯青
+  result: Perfected Skill
+  badtrans: true
+  direct: Furnace Fire, Perfect Blue
+  literal: Lu Huo Chun Qing
+- raw: 出神入化
+  result: Transcendent Mastery
+  badtrans: true
+  direct: Entering the Divine, Reaching the Marvelous
+  literal: Chu Shen Ru Hua
+- raw: 登峰造极
+  result: Reaching the Pinnacle
+  badtrans: true
+  direct: Ascend the Peak, Create the Extreme
+  literal: Deng Feng Zao Ji
+- raw: 一代宗师
+  result: Sage of an Era
+  badtrans: true
+  direct: One Generation, Grandmaster
+  literal: Yi Dai Zong Shi
+- raw: 绝世高手
+  result: Peerless Expert
+  badtrans: true
+  direct: World’s Greatest Master
+  literal: Jue Shi Gao Shou
+- raw: 独步江湖
+  result: Unrivaled in the Jianghu
+  badtrans: true
+  direct: Walk Alone in the Jianghu
+  literal: Du Bu Jiang Hu
+- raw: 天下无双
+  result: No Equal Under Heaven
+  badtrans: true
+  direct: No Equal Under Heaven
+  literal: Tian Xia Wu Shuang
+- raw: 武林传说
+  result: Wulin Legend
+  badtrans: true
+  direct: Martial Forest Legend
+  literal: Wu Lin Chuan Shuo
+- raw: 陆地神仙
+  result: Earthly Immortal
+  badtrans: true
+  direct: Land Immortal
+  literal: Lu Di Shen Xian
+
